# quokka

./: .gitmodules  CMakeLists.txt
.devcontainer/cuda-container/: Dockerfile
.devcontainer/gcc-container/: Dockerfile
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: checkpoint-restart.yml  clang-tidy.yml  cmake-macos.yml  cmake.yml  codeql.yml  codespell.yml  docs.yml  hip.yml  intel.yml  scorecard.yml  sonarcloud.yml  warnings.yml
.github/workflows/dependencies/: dependencies_hip.sh
scripts/: frontier-64node.submit  frontier-8node.submit  frontier.profile
src/: .clang-tidy  CMakeLists.txt  QuokkaSimulation.hpp  RadhydroSimulation.hpp  mhd_system.hpp  physics_info.hpp  simulation.hpp
src/cooling/: CloudyDataReader.cpp  GrackleDataReader.cpp  GrackleLikeCooling.hpp  TabulatedCooling.hpp
src/hydro/: EOS.hpp  HydroState.hpp  NSCBC_inflow.hpp  NSCBC_outflow.hpp
src/io/: projection.cpp  projection.hpp
src/linear_advection/: AdvectionSimulation.hpp
src/math/: Interpolate2D.hpp  ODEIntegrate.hpp
src/particles/: CICParticles.hpp  PhysicsParticles.hpp  RadParticles.hpp  trilinear_deposition_K.H
src/problems/: CMakeLists.txt
src/problems/Advection/: test_advection.hpp
src/problems/Advection2D/: test_advection2d.cpp
src/problems/GravRadParticle3D/: CMakeLists.txt  test_grav_rad_particle_3D.cpp  test_grav_rad_particle_3D.hpp
src/problems/NSCBC/: channel.hpp  (+2 more)
src/problems/RadCooling/: CMakeLists.txt  test_radiation_cooling.cpp
src/problems/RadParticle/: CMakeLists.txt  test_radparticle.cpp  test_radparticle.hpp
src/problems/RadParticle2D/: CMakeLists.txt  test_radparticle_2D.cpp  test_radparticle_2D.hpp
src/problems/RadhydroShockSuper/: CMakeLists.txt  test_radhydro_shock.cpp  test_radhydro_shock_super.cpp  test_radhydro_shock_super.hpp
src/problems/paper3-linear-diffusion/: CMakeLists.txt  test_linear_diffusion_multigroup.cpp  test_linear_diffusion_multigroup.hpp
src/radiation/: radiation_dust_system.hpp  radiation_system.hpp  source_terms_multi_group.hpp  source_terms_single_group.hpp
src/turbulence/: TurbDataReader.cpp
tests/: .devtest.json  BinaryOrbit.in  GravRadParticle3D.in  GravRadParticles3D.txt  LinearDiffusion.in  MarshakAsymptotic.in  MarshakVaytet.in  PopIII.in  RadCooling.in  RadDust.in  RadDustLargeStep.in  RadDustSmallCV.in  RadLineCooling.in  RadMarshakDust.in  RadMarshakDustPEcoupled.in  RadMarshakDustPEdecoupled.in  RadParticle.in  RadParticle2D.in  RadParticles.txt  RadParticles2D.txt  RadStreaming.in  RadTube.in  SNEParticles3D.txt  SinkSphericalCollapse.in  alfven_wave.in  devtool  metal_problem_ctest.in  metal_problem_ctest_nx64.in  radhydro_shell.in  radhydro_shell_regression.in  radshock_dimensionless.in  radshock_super_dimensionless.in  stars.txt
(+103 files in other folders)
